Hack in bookshelf global search

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -133,6 +133,9 @@
                 {{#if search_enabled}}
                 <div id="searchbar-outer" class="searchbar-outer">
                     <input type="search" id="searchbar" name="searchbar" placeholder="Search this book ..." aria-controls="searchresults-outer" aria-describedby="searchresults-header">
+                    <button id="search-global" type="button" title="Search Bookshelf" aria-label="Search Bookshelf">
+                        Search Bookshelf
+                    </button>
                 </div>
                 <div id="searchresults-outer" class="searchresults-outer">
                     <div class="searchresults-header" id="searchresults-header"></div>
