--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -137,14 +137,14 @@ table thead td {
   white-space: nowrap;
 }
 .page-wrapper {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   left: 0;
   position: absolute;
   right: 0;
   top: 0;
   bottom: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   -webkit-transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
   -moz-transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
   -o-transition: padding-left 0.5s, margin-left 0.5s, left 0.5s;
@@ -168,11 +168,7 @@ table thead td {
   padding: 0 15px;
   padding-bottom: 50px;
 }
-.sidebar-visible .content {
-  position: absolute;
-  top: 52px;
-}
-.content > main {
+.content main {
   margin-left: auto;
   margin-right: auto;
   max-width: 750px;
@@ -185,6 +181,10 @@ table thead td {
 }
 .content img {
   max-width: 100%;
+}
+.sidebar-visible .content {
+  position: absolute;
+  top: 52px;
 }
 #menu-bar {
   position: -webkit-sticky;
@@ -1412,8 +1412,8 @@ mark {
   max-width: 750px;
 }
 #searchbar {
-  display: block;
-  width: 100%;
+  display: inline;
+  width: 80%;
   margin: 5px auto 0px auto;
   padding: 10px 16px;
   -webkit-transition: box-shadow 300ms ease-in-out;
@@ -1421,6 +1421,10 @@ mark {
   -o-transition: box-shadow 300ms ease-in-out;
   -ms-transition: box-shadow 300ms ease-in-out;
   transition: box-shadow 300ms ease-in-out;
+}
+#search-global {
+  width: 19%;
+  height: 39px;
 }
 .searchresults-header {
   font-weight: bold;
