--- a/src/theme/stylus/searchbar.styl
+++ b/src/theme/stylus/searchbar.styl
@@ -23,11 +23,16 @@ mark {
 }
 
 #searchbar {
-    display: block;
-    width: 100%;
+    display: inline;
+    width: 80%;
     margin: 5px auto 0px auto;
     padding: 10px 16px;
     transition: box-shadow 300ms ease-in-out;
+}
+
+#search-global {
+    width: 19%;
+    height: 39px;
 }
 
 .searchresults-header {
